--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "list": "c",
-        "linkedlist.h": "c"
+        "linkedlist.h": "c",
+        "glsq.h": "c"
     }
 }
